# bili-fastapi-brwoser-rpa

./: .dockerignore  .env.dev  .gitignore  Dockerfile  README.md  docker-compose.yml  fastapi.env  init.sql  main.py  pyproject.toml  requirements.txt
app/: config.py  routes.py
app/controller/v1/browser/: base.py  browser_router.py
app/controller/v1/browser_control/: base.py  live_controller.py
app/exceptions/: handlers.py
app/models/: response.py  response_code.py
app/models/RPA_browser/: dataclass_model.py  models.py
app/models/router/: all_routes.py  router_prefix.py  router_tag.py
app/services/RPA_browser/: base_engines.py  browser_db_service.py  browser_service.py  live_service.py  playwright_pool.py
app/services/RPA_browser/base/: base_engines.py
app/services/broswer_fingerprint/: fingerprint_gen.py
app/services/geetest/: captcha_break.py
app/services/site_rpa_operation/base/: base_RPA.py  base_plugin.py  plugined_page_manager.py
app/services/site_rpa_operation/plugins/: log_plugin.py  page_limit_plugin.py  retry_plugin.py
app/services/site_rpa_operation/sites/bilibili/: login.py
app/utils/controller/: router_path.py
app/utils/decorator/: log_class_decorator.py
scripts/initd/: scripts.py
