[project]
name = "fastapiproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.9"
dependencies = [
    "aiomysql>=0.3.2",
    "crawlee[all]>=1.0.3",
    "cryptography>=46.0.3",
    "fastapi>=0.119.1",
    "fastapi-cdn-host>=0.9.2",
    "loguru>=0.7.3",
    "patchright>=1.55.2",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.38.0",
]
